 cmake_minimum_required(VERSION 3.14)
get_filename_component(ProjectId ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(REPLACE " " "_" ProjectId ${ProjectId})
project(${ProjectId})
set(INSTALL_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Bin/${CMAKE_BUILD_TYPE}")
add_executable(${ProjectId} ${ProjectId}.cpp Utility/Timer/Timer.cpp Utility/GenerateSeq/GenerateSeq.cpp)
install(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_DIR})